--- a/_posts/2018-08-28-untitled 2.md
+++ b/_posts/2018-08-28-untitled 2.md
@@ -13,4 +13,6 @@ tags:
 
 # Lorem ipsum
 
+![image_1753](image_1753.png)
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eu tempor dolor. Nulla hendrerit convallis purus et elementum. Suspendisse non magna vel justo tincidunt finibus. Nullam dui erat, malesuada eget viverra non, finibus a nisl.
