--- a/_posts/2018-08-28-untitled.md
+++ b/_posts/2018-08-28-untitled.md
@@ -1,1 +1,9 @@
 ![005Aulwngw1f41feh05t7j30j60j0go0](005Aulwngw1f41feh05t7j30j60j0go0.jpg)
+
+ 国法国法发 
+  发高富帅
+   发反倒是
+   
+![0064qyWRgy1fup1wiojf6j30k00qowk7 (1)](0064qyWRgy1fup1wiojf6j30k00qowk7%20(1).jpg)
+
+
