--- a/_posts/2018-08-28 16-14-01.md
+++ b/_posts/2018-08-28 16-14-01.md
@@ -1,1 +1,12 @@
-D:\yuwriter\boke\github\hixiaodaiblog\hixiaodai.github.io\assets\images
+
+
+# newpag
+
+地方 
+ 发发fd fasd
+  发的是f
+  
+![TB2JOInm8DH8KJjSszcXXbDTFXa_!!59198323](TB2JOInm8DH8KJjSszcXXbDTFXa_!!59198323.jpg)
+
+
+![0064qyWRgy1fup1wiojf6j30k00qowk7](0064qyWRgy1fup1wiojf6j30k00qowk7.jpg)
