--- a/_posts/2018-07-02-welc.md
+++ b/_posts/2018-07-02-welc.md
@@ -10,12 +10,11 @@ If you see this page, that means you have setup your site. enjoy! :ghost: :ghost
 
 You may want to [config the site](https://tianqi.name/jekyll-TeXt-theme/docs/en/configuration) or [writing a post](https://tianqi.name/jekyll-TeXt-theme/docs/en/writing-posts) next. Please feel free to [create an issue](https://github.com/kitian616/jekyll-TeXt-theme/issues) or [send me email](mailto:kitian616@outlook.com) if you have any questions.
 
-![](D:\yuwriter\boke\github\hixiaodaiblog\hixiaodai.github.io\assets\images\0064qyWRgy1fup1wiojf6j30k00qowk7.jpg)
 
-- [x] ![](D:\yuwriter\boke\github\hixiaodaiblog\hixiaodai.github.io\assets\images\006KzmHmly1fuof78bo88j30zk0qo0wo (1).jpg)
 
-![0064qyWRgy1fup1wiojf6j30k00qowk7](/assets/images/0064qyWRgy1fup1wiojf6j30k00qowk7.jpg)
+![](assets/006KzmHmly1fuof78bo88j30zk0qo0wo (1).jpg)
 
+![](/assets/images/0064qyWRgy1fup1wiojf6j30k00qowk7.jpg)
 
 ---
 
