--- a/_posts/2018-07-02-welc.md
+++ b/_posts/2018-07-02-welc.md
@@ -12,7 +12,7 @@ You may want to [config the site](https://tianqi.name/jekyll-TeXt-theme/docs/en/
 
 
 
-![](assets/006KzmHmly1fuof78bo88j30zk0qo0wo (1).jpg)
+![](assets/006KzmHmly1fuof78bo88j30zk0qo0wo (1)-1535528985286.jpg)
 
 ![](/assets/images/0064qyWRgy1fup1wiojf6j30k00qowk7.jpg)
 
