--- a/_posts/2018-07-02-welc.md
+++ b/_posts/2018-07-02-welc.md
@@ -13,6 +13,9 @@ You may want to [config the site](https://tianqi.name/jekyll-TeXt-theme/docs/en/
 
 
 ![](../assets/images/006KzmHmly1fuof78bo88j30zk0qo0wo (1).jpg)
+![006KzmHmly1fuof78bo88j30zk0qo0wo (1)](/assets/images/006KzmHmly1fuof78bo88j30zk0qo0wo%20(1).jpg)
+
+![006KzmHmly1fuof78bo88j30zk0qo0wo (1)]($resource/006KzmHmly1fuof78bo88j30zk0qo0wo%20(1).jpg)
 
 ![](/assets/images/0064qyWRgy1fup1wiojf6j30k00qowk7.jpg)
 
