--- a/_posts/2018-08-29-9980.md
+++ b/_posts/2018-08-29-9980.md
@@ -3,10 +3,22 @@
 ![wokao](/assets/images/006KzmHmly1fuof78bo88j30zk0qo0wo%20(1).jpg)
 
 fad fds fds
- * fda fd fdas f fd fd 
+ fda fd fdas f fd fd
  ++ fads f++
   d f
-  _dsa _
+  dsa 
   fd
-**  a sfd as**
-~~  f das fds ~~
+*  a sfd as*
+  f das fds
+
+++“在牲畜中，对于你们确有一种教训。我使++
+_你们得饮那从牲畜腹内的粪和血_
+**之间提出的又**
+
+~~纯洁又可口的乳汁。”~~，按商业清直认证所谓的清直隔离要
+
+==求，从“粪与血之间提出的”乳汁妥妥是被污染的不清直的。然==
+
+而古兰表明：“粪与血之间提出”的乳汁是纯洁的，清直认证要求
+
+# 的清直隔离是违背古兰的邪恶妄言。
