--- a/_posts/2018-08-29-9980.md
+++ b/_posts/2018-08-29-9980.md
@@ -19,6 +19,6 @@ _你们得饮那从牲畜腹内的粪和血_
 
 ==求，从“粪与血之间提出的”乳汁妥妥是被污染的不清直的。然==
 
-而古兰表明：“粪与血之间提出”的乳汁是纯洁的，清直认证要求
+>而古兰表明：“粪与血之间提出”的乳汁是纯洁的，清直认证要求
 
 # 的清直隔离是违背古兰的邪恶妄言。
