--- a/_posts/2018-08-29-9980.md
+++ b/_posts/2018-08-29-9980.md
@@ -1,3 +1,8 @@
+---
+title: fsd fds 
+key: 20180829
+tags: 民宗
+---
 /assets/images
 
 ![wokao](/assets/images/006KzmHmly1fuof78bo88j30zk0qo0wo%20(1).jpg)
