--- a/_posts/2018-08-30-天堂的位份.md
+++ b/_posts/2018-08-30-天堂的位份.md
@@ -2,6 +2,7 @@
 title: 为了天堂的位份
 key: 20180830
 tags: 凊眞饮食迷信
+excerpt_separator: <!--more-->
 ---
 
 # 为了天堂的位份
@@ -17,7 +18,7 @@ tags: 凊眞饮食迷信
 其实很简单，一句话就能说清楚：
 
 **这个父亲的心理，我能解释一半，其实就是「碰到沾染瀦禸的人就会失去后世天堂的位份」。你以为这个老爸是为了儿子的「信仰」？他不过是为了保住自己的天堂通行证而已。**
-
+<!--more-->
 当然，做出这种揣测可能纯属我的心理阴暗，肯定会有人用「你又不是XXX、你怎么知道。」来指责我。我读书少，只会抄点学者的论文：
 
 ![0002](/assets/images/0002.jpg)
