--- a/_posts/2018-9-1-测试新文件夹.md
+++ b/_posts/2018-9-1-测试新文件夹.md
@@ -31,12 +31,14 @@ excerpt_separator: <!--more-->
 以下是这个「茴香豆」产品的生产方「南京虹园食品有限公司」的自我介绍：
 
 >南京虹园食品有限公司座落于饮食历史文化古城南京，
-是集生产、检验、配送、销售于一体的
-清真休闲食品专业生产企业。
-主要产品有“夫子庙”牌炒货
-在南京各大商场超市设有品牌专柜，
-在各大卖场及超市均有销售，
-并远销外地几十个省、市。​
+>是集生产、检验、配送、销售于一体的
+>清真休闲食品专业生产企业。
+>主要产品有“夫子庙”牌炒货
+>在南京各大商场超市设有品牌专柜，
+>在各大卖场及超市均有销售，
+>并远销外地几十个省、市。
+
+![0001](../assets/images/0001.jpg)
 
 #㈡ 凊眞标志
 ![0003](/assets/0003.jpg)
