先对文件夹
相对地址

--- a/_posts/2018-9-1-测试新文件夹.md
+++ b/_posts/2018-9-1-测试新文件夹.md
@@ -38,7 +38,7 @@ excerpt_separator: <!--more-->
 >在各大卖场及超市均有销售，
 >并远销外地几十个省、市。
 
-![0001](../assets/images/0001.jpg)
+![0001](/assets/images/0001.jpg)
 
 #㈡ 凊眞标志
 ![0003](/assets/0003.jpg)
