--- a/_posts/2018-9-1-测试新文件夹.md
+++ b/_posts/2018-9-1-测试新文件夹.md
@@ -37,8 +37,13 @@ excerpt_separator: <!--more-->
 >在南京各大商场超市设有品牌专柜，
 >在各大卖场及超市均有销售，
 >并远销外地几十个省、市。
-
+a![0003](/assets/0003.jpg)
+![image_2015](/assets/images/image_2015.png)
 ![0001](/assets/images/0001.jpg)
+
+![image_2014](/assets/images/image_2014_pazh9p821.png)
+![2018-08-12_090240](/assets/images/2018-08-12_090240.jpg)
+![android-chrome-512x512](/assets/images/android-chrome-512x512.png)
 
 #㈡ 凊眞标志
 ![0003](/assets/0003.jpg)
