--- a/_posts/2018-9-1-测试新文件夹.md
+++ b/_posts/2018-9-1-测试新文件夹.md
@@ -9,7 +9,7 @@ excerpt_separator: <!--more-->
 
 计算机
 
-
+![2018-08-12_090240](/assets/images/2018-08-12_090240.jpg)
 
 先说一下结论：
 
@@ -21,7 +21,7 @@ excerpt_separator: <!--more-->
 
 不知道是怎么被批准上市的，也不知道南京有没有执法部门在。
 
-
+![2018-08-12_154908](/assets/images/2018-08-12_154908_hoz43wqwe.jpg)
 
 ㈠ 事实
 
@@ -34,7 +34,7 @@ excerpt_separator: <!--more-->
 >在南京各大商场超市设有品牌专柜，
 >在各大卖场及超市均有销售，
 >并远销外地几十个省、市。
-
+![2018-08-12_161813](/assets/images/2018-08-12_161813.jpg)
 
 #㈡ 凊眞标志
 
