第二个同步测试
测试

--- a/_posts/2018-9-1-测试新文件夹.md
+++ b/_posts/2018-9-1-测试新文件夹.md
@@ -37,5 +37,6 @@ excerpt_separator: <!--more-->
 ![2018-08-12_161813](/assets/images/2018-08-12_161813.jpg)
 
 #㈡ 凊眞标志
-
+JISUAN
+看看是不是能同步过去
 这是我在淘宝店和阿里巴巴http://1688.com代理商找到的「南京虹园食品有限公司」产品的宣传照片。
